--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Front End Protfolio</title>
-  <link href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,600;1,300&display=swap" rel="stylesheet">
+  <link href="css/styles.css" rel='stylesheet'>
 </head>
 <body>
-  
+    <header>
+    <h1>&lbrace; jason &rbrace;</h1>
+  </header>
+  <aside>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#portflio">Protfolio</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </aside>
+  <main>
+    <section id='about'>
+      <h2>About</h2>
+    </section>
+    <section id='skills'>
+      <h2>Skills</h2>
+    </section>
+    <section id='protfolio'>
+      <h2>Protfolio</h2>
+    </section>
+    <section id='contact'>
+      <h2>Contact</h2>
+    </section>
+  </main>
+  <footer>
+
+  </footer>
   <script src='app.js'></script>
 </body>
 </html>
