--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Front End Protfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,600;1,300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,600;1,300&display=swap"
+    rel="stylesheet">
   <link href="css/styles.css" rel='stylesheet'>
 </head>
+
 <body>
-    <header>
+  <header>
     <h1>&lbrace; jason &rbrace;</h1>
   </header>
   <aside>
@@ -27,15 +30,70 @@
   <main>
     <section id='about'>
       <h2>About</h2>
+      <p>Hi, my name is Jason! I am an asipring Front End Developer. I have been studing front end developement for about 1.5 years and have loved each minute of it. I had originally wanted to become a cartoonist since I loved creating somthing from scratch and making a beautiful image. I found my passion for Front End Development when taking a cohort that was offered at my job for develpment, from there everything changed. I loved that I could do the same thing with cartooning on a computer and create something amazing. From choosing the right persecitve of a layout, to the corresponding colors, to final product. Being a developer would be an amazing thing to be able to create and show everyone what I can do, and what can be done! </p>
     </section>
     <section id='skills'>
       <h2>Skills</h2>
+      <div>
+        <p>HMTL5</p>
+        <p>CSS3</p>
+        <p>JavaScript</p>
+        <p>Sass</p>
+      </div>
     </section>
     <section id='protfolio'>
       <h2>Protfolio</h2>
+      <section>
+        <img src="/images/layout.png" alt="layout-app">
+        <div>
+        <p>Layout App</p>
+        <p>My Layout App displays the different ways and methods that can be used when laying out a website. Also shows different ways that you can alert and target different elements on a page</p>
+        </div>
+      </section>
+      <section>
+        <img src="/images/form.png" alt="form-app">
+        <div>
+          <p>Form App</p>
+          <p>This form app will let you submit any new user information. The form was written in semantic HTML to properly display and interact with each element.</p>
+          </div>
+      </section>
+      <section>
+        <img src="/images/photoGallery.png" alt="photo-gallery-app">
+        <div>
+          <p>Photo Gallery App</p>
+          <p>The Photo Gallery app allows user to see and interact with different photos. Users are able to search photo my name and filter out each image that does not match.</p>
+          </div>
+      </section>
+      <section>
+        <img src="/images/wheelSuccess.png" alt="wheel-success-app">
+        <div>
+          <p>Wheel of Success Game App</p>
+          <p>This is a fun and interactive phrase guessing game. If you guess right a letter is revealed, if you guess wrong you lose a life. Users have 5 lives to try and guess the correct phrase. If you lose, no worries, you can try again!</p>
+          </div>
+      </section>
+      <section>
+        <img src="/images/webApp.png" alt="web-graph-app">
+        <div>
+          <p>Web Graph App</p>
+          <p>The Web Graph app will allow users to see all metrics displayed different graphs. You can change to view the graph between hourly, daily, weekly, or monthly metrics. You can also save your perferred setting or message any users and filter them by name.</p>
+          </div>
+      </section>
+      <section>
+        <img src="/images/directory.png" alt="employee-directory-app">
+        <div>
+          <p>Employee Directory App</p>
+          <p>This employee directory app use API to display images and information from a database into an employee directory. The directory will initally display all the employees info, but when clicked a modal box will display all the employees information. You can search and filter through each employees name to find the person you are looking for.</p>
+          </div>
+      </section>
     </section>
     <section id='contact'>
       <h2>Contact</h2>
+      <p>Jason Sera</p>
+      <div>
+        <p>jason.sera0624@gmail.com</p>
+        <p>gitHub</p>
+        <p>example</p>
+      </div>
     </section>
   </main>
   <footer>
@@ -43,4 +101,5 @@
   </footer>
   <script src='app.js'></script>
 </body>
+
 </html>
