created files for sass each sass folders and connected each file via an index file. Working on main portfolio layout

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 </head>
 
 <body>
-  <header>
-    <h1>&lbrace; jason &rbrace;</h1>
+  <header class='main-header'>
+    <img src="images/placeimg_640_480_grayscale_tech.jpg" alt="computer with code">
+    <div class='main-name'>
+      <h1>&lbrace; jason &rbrace;</h1>
+    </div>
   </header>
   <aside>
     <nav>
