moved aside nav menu to heading of page for mobile view. Changed hover view to tablet mode of min-width: 768px. Changed h2 layout of each section

--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
     </div>
   </header>
   <aside>
-    <nav>
-      <ul>
+    <nav class='nav-bar'>
+      <ul class='nav-list'>
         <li><a href="#">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
-        <li><a href="#portflio">Protfolio</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </aside>
   <main>
     <section id='about'>
-      <h2>About</h2>
+      <h2>&lbrace; About &rbrace;<span class='heading-sub-one'>Me</span></h2>
       <p>Hi, my name is Jason! I am an asipring Front End Developer. I have been studing front end developement for about 1.5 years and have loved each minute of it. I had originally wanted to become a cartoonist since I loved creating somthing from scratch and making a beautiful image. I found my passion for Front End Development when taking a cohort that was offered at my job for develpment, from there everything changed. I loved that I could do the same thing with cartooning on a computer and create something amazing. From choosing the right persecitve of a layout, to the corresponding colors, to final product. Being a developer would be an amazing thing to be able to create and show everyone what I can do, and what can be done! </p>
     </section>
     <section id='skills'>
-      <h2>Skills</h2>
+      <h2>&lbrace; Skills &rbrace;<span class='heading-sub-two' >List</span></h2>
       <div>
         <p>HMTL5</p>
         <p>CSS3</p>
@@ -44,8 +44,8 @@
         <p>Sass</p>
       </div>
     </section>
-    <section id='protfolio'>
-      <h2>Protfolio</h2>
+    <section id='portfolio'>
+      <h2>&lbrace; Protfolio &rbrace;<span class='heading-sub-three' >Gallery</span></h2>
       <section>
         <img src="/images/layout.png" alt="layout-app">
         <div>
@@ -90,7 +90,7 @@
       </section>
     </section>
     <section id='contact'>
-      <h2>Contact</h2>
+      <h2>&lbrace; Contact &rbrace;<span class='heading-sub-four' >Info</span></h2>
       <p>Jason Sera</p>
       <div>
         <p>jason.sera0624@gmail.com</p>
