changed html markup to have portfolio items within the portfolio section instead of in seperate sections. Still working on main layout and css stylings

--- a/index.html
+++ b/index.html
@@ -32,72 +32,100 @@
   </aside>
   <main>
     <section id='about'>
-      <h2>&lbrace; About &rbrace;<span class='heading-sub-one'>Me</span></h2>
-      <p>Hi, my name is Jason! I am an asipring Front End Developer. I have been studing front end developement for about 1.5 years and have loved each minute of it. I had originally wanted to become a cartoonist since I loved creating somthing from scratch and making a beautiful image. I found my passion for Front End Development when taking a cohort that was offered at my job for develpment, from there everything changed. I loved that I could do the same thing with cartooning on a computer and create something amazing. From choosing the right persecitve of a layout, to the corresponding colors, to final product. Being a developer would be an amazing thing to be able to create and show everyone what I can do, and what can be done! </p>
+      <div class='container'>
+        <h2>&lbrace; about &rbrace;<span class='heading-sub-one'>Me</span></h2>
+        <p>Hi, my name is Jason! I am an asipring Front End Developer. I have been studing front end developement for
+          about 1.5 years and have loved each minute of it. I had originally wanted to become a cartoonist since I loved
+          creating somthing from scratch and making a beautiful image. I found my passion for Front End Development when
+          taking a cohort that was offered at my job for develpment, from there everything changed. I loved that I could
+          do the same thing with cartooning on a computer and create something amazing. From choosing the right
+          persecitve of a layout, to the corresponding colors, to final product. Being a developer would be an amazing
+          thing to be able to create and show everyone what I can do, and what can be done! </p>
+      </div>
     </section>
     <section id='skills'>
-      <h2>&lbrace; Skills &rbrace;<span class='heading-sub-two' >List</span></h2>
-      <div>
-        <p>HMTL5</p>
-        <p>CSS3</p>
-        <p>JavaScript</p>
-        <p>Sass</p>
-      </div>
+      <div class='container'>
+        <h2>&lbrace; skills &rbrace;<span class='heading-sub-two'>List</span></h2>
+        <div>
+          <p>HMTL5</p>
+          <p>CSS3</p>
+          <p>JavaScript</p>
+          <p>Sass</p>
+        </div>
+        <div class='container'></div>
     </section>
     <section id='portfolio'>
-      <h2>&lbrace; Protfolio &rbrace;<span class='heading-sub-three' >Gallery</span></h2>
-      <section>
-        <img src="/images/layout.png" alt="layout-app">
-        <div>
-        <p>Layout App</p>
-        <p>My Layout App displays the different ways and methods that can be used when laying out a website. Also shows different ways that you can alert and target different elements on a page</p>
+      <div class='container portfolio'>
+        <h2>&lbrace; portfolio &rbrace;<span class='heading-sub-three'>Gallery</span></h2>
+        <div class='portfolio-list'>
+          <div class='portfolio-item'>
+          <img src="/images/layout.png" alt="layout-app">
+          <div>
+            <p>Layout App</p>
+            <p>My Layout App displays the different ways and methods that can be used when laying out a website. Also
+              shows different ways that you can alert and target different elements on a page</p>
+          </div>
+          </div>
+          <div class='portfolio-item'>
+            <img src="/images/form.png" alt="form-app">
+            <div>
+              <p>Form App</p>
+              <p>This form app will let you submit any new user information. The form was written in semantic HTML to
+                properly display and interact with each element.</p>
+            </div>
+          </div>
+          <div class='portfolio-item'>
+            <img src="/images/photoGallery.png" alt="photo-gallery-app">
+            <div>
+              <p>Photo Gallery App</p>
+              <p>The Photo Gallery app allows user to see and interact with different photos. Users are able to search
+                photo my name and filter out each image that does not match.</p>
+            </div>
+          </div>
+          <div class='portfolio-item'>
+            <img src="/images/wheelSuccess.png" alt="wheel-success-app">
+            <div>
+              <p>Wheel of Success Game App</p>
+              <p>This is a fun and interactive phrase guessing game. If you guess right a letter is revealed, if you
+                guess
+                wrong you lose a life. Users have 5 lives to try and guess the correct phrase. If you lose, no worries,
+                you can try again!</p>
+            </div>
+          </div>
+          <div class='portfolio-item'>
+            <img src="/images/webApp.png" alt="web-graph-app">
+            <div>
+              <p>Web Graph App</p>
+              <p>The Web Graph app will allow users to see all metrics displayed different graphs. You can change to
+                view
+                the graph between hourly, daily, weekly, or monthly metrics. You can also save your perferred setting or
+                message any users and filter them by name.</p>
+            </div>
+          </div>
+          <div class='portfolio-item'>
+            <img src="/images/directory.png" alt="employee-directory-app">
+            <div>
+              <p>Employee Directory App</p>
+              <p>This employee directory app use API to display images and information from a database into an employee
+                directory. The directory will initally display all the employees info, but when clicked a modal box will
+                display all the employees information. You can search and filter through each employees name to find the
+                person you are looking for.</p>
+            </div>
+          </div>
         </div>
-      </section>
-      <section>
-        <img src="/images/form.png" alt="form-app">
-        <div>
-          <p>Form App</p>
-          <p>This form app will let you submit any new user information. The form was written in semantic HTML to properly display and interact with each element.</p>
-          </div>
-      </section>
-      <section>
-        <img src="/images/photoGallery.png" alt="photo-gallery-app">
-        <div>
-          <p>Photo Gallery App</p>
-          <p>The Photo Gallery app allows user to see and interact with different photos. Users are able to search photo my name and filter out each image that does not match.</p>
-          </div>
-      </section>
-      <section>
-        <img src="/images/wheelSuccess.png" alt="wheel-success-app">
-        <div>
-          <p>Wheel of Success Game App</p>
-          <p>This is a fun and interactive phrase guessing game. If you guess right a letter is revealed, if you guess wrong you lose a life. Users have 5 lives to try and guess the correct phrase. If you lose, no worries, you can try again!</p>
-          </div>
-      </section>
-      <section>
-        <img src="/images/webApp.png" alt="web-graph-app">
-        <div>
-          <p>Web Graph App</p>
-          <p>The Web Graph app will allow users to see all metrics displayed different graphs. You can change to view the graph between hourly, daily, weekly, or monthly metrics. You can also save your perferred setting or message any users and filter them by name.</p>
-          </div>
-      </section>
-      <section>
-        <img src="/images/directory.png" alt="employee-directory-app">
-        <div>
-          <p>Employee Directory App</p>
-          <p>This employee directory app use API to display images and information from a database into an employee directory. The directory will initally display all the employees info, but when clicked a modal box will display all the employees information. You can search and filter through each employees name to find the person you are looking for.</p>
-          </div>
-      </section>
     </section>
     <section id='contact'>
-      <h2>&lbrace; Contact &rbrace;<span class='heading-sub-four' >Info</span></h2>
-      <p>Jason Sera</p>
-      <div>
-        <p>jason.sera0624@gmail.com</p>
-        <p>gitHub</p>
-        <p>example</p>
+      <div class='container'>
+        <h2>&lbrace; contact &rbrace;<span class='heading-sub-four'>Info</span></h2>
+        <p>Jason Sera</p>
+        <div>
+          <p>jason.sera0624@gmail.com</p>
+          <p>gitHub</p>
+          <p>example</p>
+        </div>
       </div>
     </section>
+    </div>
   </main>
   <footer>
 
