--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class='portfolio-list'>
           <div class='portfolio-item'>
           <img src="/images/layout.png" alt="layout-app">
-          <div>
+          <div class='portfolio-info'>
             <p>Layout App</p>
             <p>My Layout App displays the different ways and methods that can be used when laying out a website. Also
               shows different ways that you can alert and target different elements on a page</p>
@@ -68,7 +68,7 @@
           </div>
           <div class='portfolio-item'>
             <img src="/images/form.png" alt="form-app">
-            <div>
+            <div class='portfolio-info'>
               <p>Form App</p>
               <p>This form app will let you submit any new user information. The form was written in semantic HTML to
                 properly display and interact with each element.</p>
@@ -76,7 +76,7 @@
           </div>
           <div class='portfolio-item'>
             <img src="/images/photoGallery.png" alt="photo-gallery-app">
-            <div>
+            <div class='portfolio-info'>
               <p>Photo Gallery App</p>
               <p>The Photo Gallery app allows user to see and interact with different photos. Users are able to search
                 photo my name and filter out each image that does not match.</p>
@@ -84,7 +84,7 @@
           </div>
           <div class='portfolio-item'>
             <img src="/images/wheelSuccess.png" alt="wheel-success-app">
-            <div>
+            <div class='portfolio-info'>
               <p>Wheel of Success Game App</p>
               <p>This is a fun and interactive phrase guessing game. If you guess right a letter is revealed, if you
                 guess
@@ -94,7 +94,7 @@
           </div>
           <div class='portfolio-item'>
             <img src="/images/webApp.png" alt="web-graph-app">
-            <div>
+            <div class='portfolio-info'>
               <p>Web Graph App</p>
               <p>The Web Graph app will allow users to see all metrics displayed different graphs. You can change to
                 view
@@ -104,7 +104,7 @@
           </div>
           <div class='portfolio-item'>
             <img src="/images/directory.png" alt="employee-directory-app">
-            <div>
+            <div class='portfolio-info'>
               <p>Employee Directory App</p>
               <p>This employee directory app use API to display images and information from a database into an employee
                 directory. The directory will initally display all the employees info, but when clicked a modal box will
