finished creating sliding effect with p element in about section. Working on the sliding effect also on working on the bottom border. Added a scaling effect to <a> tags in nav-bar to scale when hovered

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id='about'>
       <div class='container'>
         <h2>&lbrace; about &rbrace;<span class='heading-sub-one'>Me</span></h2>
-        <p class='display hide'>Hi, my name is Jason! I am an asipring Front End Developer. I have been studing front end developement for
+        <p class='display'>Hi, my name is Jason! I am an asipring Front End Developer. I have been studing front end developement for
           about 1.5 years and have loved each minute of it. I had originally wanted to become a cartoonist since I loved
           creating somthing from scratch and making a beautiful image. I found my passion for Front End Development when
           taking a cohort that was offered at my job for develpment, from there everything changed. I loved that I could
