--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <section id='about'>
       <div class='container'>
         <h2>&lbrace; about &rbrace;<span class='heading-sub-one'>Me</span></h2>
-        <p class='display'>Hi, my name is Jason! I am an asipring Front End Developer. I have been studing front end developement for
+        <p class='display'>Hi, my name is Jason! I am an asipring Front End Developer. I have been studing front end
+          developement for
           about 1.5 years and have loved each minute of it. I had originally wanted to become a cartoonist since I loved
           creating somthing from scratch and making a beautiful image. I found my passion for Front End Development when
           taking a cohort that was offered at my job for develpment, from there everything changed. I loved that I could
@@ -46,11 +47,39 @@
     <section id='skills'>
       <div class='container'>
         <h2>&lbrace; skills &rbrace;<span class='heading-sub-two'>List</span></h2>
-        <div>
+        <div class='skills'>
+          <div class='html skill'>
+          <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <title>HTML5</title>
+            <path
+              d="M1.5 0h21l-1.91 21.563L11.977 24l-8.564-2.438L1.5 0zm7.031 9.75l-.232-2.718 10.059.003.23-2.622L5.412 4.41l.698 8.01h9.126l-.326 3.426-2.91.804-2.955-.81-.188-2.11H6.248l.33 4.171L12 19.351l5.379-1.443.744-8.157H8.531z" />
+          </svg>
           <p>HMTL5</p>
+          </div>
+          <div class='css skill'>
+          <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <title>CSS3</title>
+            <path
+              d="M1.5 0h21l-1.91 21.563L11.977 24l-8.565-2.438L1.5 0zm17.09 4.413L5.41 4.41l.213 2.622 10.125.002-.255 2.716h-6.64l.24 2.573h6.182l-.366 3.523-2.91.804-2.956-.81-.188-2.11h-2.61l.29 3.855L12 19.288l5.373-1.53L18.59 4.414z" />
+          </svg>
           <p>CSS3</p>
+          </div>
+          <div class='js skill'>
+          <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <title>JavaScript</title>
+            <path
+              d="M0 0h24v24H0V0zm22.034 18.276c-.175-1.095-.888-2.015-3.003-2.873-.736-.345-1.554-.585-1.797-1.14-.091-.33-.105-.51-.046-.705.15-.646.915-.84 1.515-.66.39.12.75.42.976.9 1.034-.676 1.034-.676 1.755-1.125-.27-.42-.404-.601-.586-.78-.63-.705-1.469-1.065-2.834-1.034l-.705.089c-.676.165-1.32.525-1.71 1.005-1.14 1.291-.811 3.541.569 4.471 1.365 1.02 3.361 1.244 3.616 2.205.24 1.17-.87 1.545-1.966 1.41-.811-.18-1.26-.586-1.755-1.336l-1.83 1.051c.21.48.45.689.81 1.109 1.74 1.756 6.09 1.666 6.871-1.004.029-.09.24-.705.074-1.65l.046.067zm-8.983-7.245h-2.248c0 1.938-.009 3.864-.009 5.805 0 1.232.063 2.363-.138 2.711-.33.689-1.18.601-1.566.48-.396-.196-.597-.466-.83-.855-.063-.105-.11-.196-.127-.196l-1.825 1.125c.305.63.75 1.172 1.324 1.517.855.51 2.004.675 3.207.405.783-.226 1.458-.691 1.811-1.411.51-.93.402-2.07.397-3.346.012-2.054 0-4.109 0-6.179l.004-.056z" />
+          </svg>
           <p>JavaScript</p>
+          </div>
+          <div class='sass skill'>
+          <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <title>Sass</title>
+            <path
+              d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0zM9.615 15.998c.175.645.156 1.248-.024 1.792l-.065.18c-.024.061-.052.12-.078.176-.14.29-.326.56-.555.81-.698.759-1.672 1.047-2.09.805-.45-.262-.226-1.335.584-2.19.871-.918 2.12-1.509 2.12-1.509v-.003l.108-.061zm9.911-10.861c-.542-2.133-4.077-2.834-7.422-1.645-1.989.707-4.144 1.818-5.693 3.267C4.568 8.48 4.275 9.98 4.396 10.607c.427 2.211 3.457 3.657 4.703 4.73v.006c-.367.18-3.056 1.529-3.686 2.925-.675 1.47.105 2.521.615 2.655 1.575.436 3.195-.36 4.065-1.649.84-1.261.766-2.881.404-3.676.496-.135 1.08-.195 1.83-.104 2.101.24 2.521 1.56 2.43 2.1-.09.539-.523.854-.674.944-.15.091-.195.12-.181.181.015.09.091.09.21.075.165-.03 1.096-.45 1.141-1.471.045-1.29-1.186-2.729-3.375-2.7-.9.016-1.471.091-1.875.256-.03-.045-.061-.075-.105-.105-1.35-1.455-3.855-2.475-3.75-4.41.03-.705.285-2.564 4.8-4.814 3.705-1.846 6.661-1.335 7.171-.21.733 1.604-1.576 4.59-5.431 5.024-1.47.165-2.235-.404-2.431-.615-.209-.225-.239-.24-.314-.194-.12.06-.045.255 0 .375.12.3.585.825 1.396 1.095.704.225 2.43.359 4.5-.45 2.324-.899 4.139-3.405 3.614-5.505l.073.067z" />
+          </svg>
           <p>Sass</p>
+          </div>
         </div>
         <div class='container'></div>
     </section>
@@ -59,33 +88,33 @@
         <h2>&lbrace; portfolio &rbrace;<span class='heading-sub-three'>Gallery</span></h2>
         <div class='portfolio-list'>
           <div class='portfolio-item'>
-          <img src="/images/layout.png" alt="layout-app">
-          <div class='portfolio-info'>
             <p>Layout App</p>
-            <p>My Layout App displays the different ways and methods that can be used when laying out a website. Also
-              shows different ways that you can alert and target different elements on a page</p>
-          </div>
+            <img src="/images/layout.png" alt="layout-app">
+            <div class='portfolio-info'>
+              <p>My Layout App displays the different ways and methods that can be used when laying out a website. Also
+                shows different ways that you can alert and target different elements on a page</p>
+            </div>
           </div>
           <div class='portfolio-item'>
+            <p>Form App</p>
             <img src="/images/form.png" alt="form-app">
             <div class='portfolio-info'>
-              <p>Form App</p>
               <p>This form app will let you submit any new user information. The form was written in semantic HTML to
                 properly display and interact with each element.</p>
             </div>
           </div>
           <div class='portfolio-item'>
+            <p>Photo Gallery App</p>
             <img src="/images/photoGallery.png" alt="photo-gallery-app">
             <div class='portfolio-info'>
-              <p>Photo Gallery App</p>
               <p>The Photo Gallery app allows user to see and interact with different photos. Users are able to search
                 photo my name and filter out each image that does not match.</p>
             </div>
           </div>
           <div class='portfolio-item'>
+            <p>Wheel of Success Game App</p>
             <img src="/images/wheelSuccess.png" alt="wheel-success-app">
             <div class='portfolio-info'>
-              <p>Wheel of Success Game App</p>
               <p>This is a fun and interactive phrase guessing game. If you guess right a letter is revealed, if you
                 guess
                 wrong you lose a life. Users have 5 lives to try and guess the correct phrase. If you lose, no worries,
@@ -93,9 +122,9 @@
             </div>
           </div>
           <div class='portfolio-item'>
+            <p>Web Graph App</p>
             <img src="/images/webApp.png" alt="web-graph-app">
             <div class='portfolio-info'>
-              <p>Web Graph App</p>
               <p>The Web Graph app will allow users to see all metrics displayed different graphs. You can change to
                 view
                 the graph between hourly, daily, weekly, or monthly metrics. You can also save your perferred setting or
@@ -103,9 +132,9 @@
             </div>
           </div>
           <div class='portfolio-item'>
+            <p>Employee Directory App</p>
             <img src="/images/directory.png" alt="employee-directory-app">
             <div class='portfolio-info'>
-              <p>Employee Directory App</p>
               <p>This employee directory app use API to display images and information from a database into an employee
                 directory. The directory will initally display all the employees info, but when clicked a modal box will
                 display all the employees information. You can search and filter through each employees name to find the
@@ -119,7 +148,17 @@
         <h2>&lbrace; contact &rbrace;<span class='heading-sub-four'>Info</span></h2>
         <p>Jason Sera</p>
         <div>
+          <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <title>Gmail</title>
+            <path
+              d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64 12 9.548l6.545-4.91 1.528-1.145C21.69 2.28 24 3.434 24 5.457z" />
+          </svg>
           <p>jason.sera0624@gmail.com</p>
+          <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <title>GitHub</title>
+            <path
+              d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+          </svg>
           <p>gitHub</p>
           <p>example</p>
         </div>
