Created and added project files so can be linked live when anchor is clicked for that app. Changed border color to be darker

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <img src="/images/layout.png" alt="layout-app">
             <div class='portfolio-info'>
               <p>My Layout App displays the different ways and methods that can be used when laying out a website. Also
-                shows different ways that you can alert and target different elements on a page</p>
+                shows different ways that you can alert and target different elements on a page<a href="/projects/techdegree-project-4/style_guide_v7/index.html" target="_blank"> Layout App</a></p>
             </div>
           </div>
           <div class='portfolio-item'>
@@ -100,7 +100,7 @@
             <img src="/images/form.png" alt="form-app">
             <div class='portfolio-info'>
               <p>This form app will let you submit any new user information. The form was written in semantic HTML to
-                properly display and interact with each element.</p>
+                properly display and interact with each element.<a href="/projects/techdegree-project-3/index.html" target="_blank"> Form App</a></p>
             </div>
           </div>
           <div class='portfolio-item'>
@@ -108,7 +108,7 @@
             <img src="/images/photoGallery.png" alt="photo-gallery-app">
             <div class='portfolio-info'>
               <p>The Photo Gallery app allows user to see and interact with different photos. Users are able to search
-                photo my name and filter out each image that does not match.</p>
+                photo my name and filter out each image that does not match.<a href="/projects/techdegree-project-5/index.html" target="_blank"> Photo Gallery App</a></p>
             </div>
           </div>
           <div class='portfolio-item'>
@@ -118,7 +118,7 @@
               <p>This is a fun and interactive phrase guessing game. If you guess right a letter is revealed, if you
                 guess
                 wrong you lose a life. Users have 5 lives to try and guess the correct phrase. If you lose, no worries,
-                you can try again!</p>
+                you can try again!<a href="/projects/techdegree-project-6/game_show_app_v1.2/index.html" target="_blank"> Wheel of Success Game App</a></p>
             </div>
           </div>
           <div class='portfolio-item'>
@@ -128,17 +128,17 @@
               <p>The Web Graph app will allow users to see all metrics displayed different graphs. You can change to
                 view
                 the graph between hourly, daily, weekly, or monthly metrics. You can also save your perferred setting or
-                message any users and filter them by name.</p>
+                message any users and filter them by name.<a href="/projects/techdegree-project-7/index.html" target="_blank"> Web Graph App</a></p>
             </div>
           </div>
           <div class='portfolio-item'>
             <p>Employee Directory App</p>
             <img src="/images/directory.png" alt="employee-directory-app">
             <div class='portfolio-info'>
-              <p>This employee directory app use API to display images and information from a database into an employee
+              <p>This employee directory app uses API to display images and information from a database into an employee
                 directory. The directory will initally display all the employees info, but when clicked a modal box will
                 display all the employees information. You can search and filter through each employees name to find the
-                person you are looking for.</p>
+                person you are looking for.<a href="/projects/techdegree-project-8/index.html" target="_blank"> Web Graph App</a></p>
             </div>
           </div>
         </div>
