--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
       <div class='container portfolio'>
         <h2>&lbrace; portfolio &rbrace;<span class='heading-sub-three'>Gallery</span></h2>
         <div class='portfolio-list'>
-          <div class='portfolio-item'>
             <p>Layout App</p>
+            <div class=portfolio-item>
             <img src="/images/layout.png" alt="layout-app">
             <div class='portfolio-info'>
               <p>My Layout App displays the different ways and methods that can be used when laying out a website. Also
@@ -104,8 +104,8 @@
                   href="/projects/techdegree-project-4/style_guide_v7/index.html" target="_blank"> Layout App</a></p>
             </div>
           </div>
-          <div class='portfolio-item'>
             <p>Form App</p>
+            <div class='portfolio-item'>
             <img src="/images/form.png" alt="form-app">
             <div class='portfolio-info'>
               <p>This form app will let you submit any new user information. The form was written in semantic HTML to
@@ -113,8 +113,8 @@
                   target="_blank"> Form App</a></p>
             </div>
           </div>
-          <div class='portfolio-item'>
             <p>Photo Gallery App</p>
+            <div class='portfolio-item'>
             <img src="/images/photoGallery.png" alt="photo-gallery-app">
             <div class='portfolio-info'>
               <p>The Photo Gallery app allows user to see and interact with different photos. Users are able to search
@@ -122,8 +122,8 @@
                   href="/projects/techdegree-project-5/index.html" target="_blank"> Photo Gallery App</a></p>
             </div>
           </div>
-          <div class='portfolio-item'>
             <p>Wheel of Success Game App</p>
+            <div class='portfolio-item'>
             <img src="/images/wheelSuccess.png" alt="wheel-success-app">
             <div class='portfolio-info'>
               <p>This is a fun and interactive phrase guessing game. If you guess right a letter is revealed, if you
@@ -133,8 +133,8 @@
                   target="_blank"> Wheel of Success Game App</a></p>
             </div>
           </div>
-          <div class='portfolio-item'>
             <p>Web Graph App</p>
+            <div class='portfolio-item'>
             <img src="/images/webApp.png" alt="web-graph-app">
             <div class='portfolio-info'>
               <p>The Web Graph app will allow users to see all metrics displayed different graphs. You can change to
@@ -144,8 +144,8 @@
                   target="_blank"> Web Graph App</a></p>
             </div>
           </div>
-          <div class='portfolio-item'>
             <p>Employee Directory App</p>
+            <div class='portfolio-item'>
             <img src="/images/directory.png" alt="employee-directory-app">
             <div class='portfolio-info'>
               <p>This employee directory app uses API to display images and information from a database into an employee
