created layout for project view. Added title for mobiel view and then to tablet view

--- a/index.html
+++ b/index.html
@@ -95,37 +95,41 @@
       <div class='container portfolio'>
         <h2>&lbrace; portfolio &rbrace;<span class='heading-sub-three'>Gallery</span></h2>
         <div class='portfolio-list'>
-            <p>Layout App</p>
+            <p class='mobile-title'>Layout App</p>
             <div class=portfolio-item>
             <img src="/images/layout.png" alt="layout-app">
             <div class='portfolio-info'>
+              <p class='tablet-title'>Layout App</p>
               <p>My Layout App displays the different ways and methods that can be used when laying out a website. Also
                 shows different ways that you can alert and target different elements on a page<a
                   href="/projects/techdegree-project-4/style_guide_v7/index.html" target="_blank"> Layout App</a></p>
             </div>
           </div>
-            <p>Form App</p>
+            <p class='mobile-title'>Form App</p>
             <div class='portfolio-item'>
             <img src="/images/form.png" alt="form-app">
             <div class='portfolio-info'>
+              <p class='tablet-title'>Form App</p>
               <p>This form app will let you submit any new user information. The form was written in semantic HTML to
                 properly display and interact with each element.<a href="/projects/techdegree-project-3/index.html"
                   target="_blank"> Form App</a></p>
             </div>
           </div>
-            <p>Photo Gallery App</p>
+            <p class='mobile-title'>Photo Gallery App</p>
             <div class='portfolio-item'>
             <img src="/images/photoGallery.png" alt="photo-gallery-app">
             <div class='portfolio-info'>
+              <p class='tablet-title'>Photo Gallery App</p>
               <p>The Photo Gallery app allows user to see and interact with different photos. Users are able to search
                 photo my name and filter out each image that does not match.<a
                   href="/projects/techdegree-project-5/index.html" target="_blank"> Photo Gallery App</a></p>
             </div>
           </div>
-            <p>Wheel of Success Game App</p>
+            <p class='mobile-title'>Wheel of Success Game App</p>
             <div class='portfolio-item'>
             <img src="/images/wheelSuccess.png" alt="wheel-success-app">
             <div class='portfolio-info'>
+              <p class='tablet-title'>Wheel of Success Game App</p>
               <p>This is a fun and interactive phrase guessing game. If you guess right a letter is revealed, if you
                 guess
                 wrong you lose a life. Users have 5 lives to try and guess the correct phrase. If you lose, no worries,
@@ -133,10 +137,11 @@
                   target="_blank"> Wheel of Success Game App</a></p>
             </div>
           </div>
-            <p>Web Graph App</p>
+            <p class='mobile-title'>Web Graph App</p>
             <div class='portfolio-item'>
             <img src="/images/webApp.png" alt="web-graph-app">
             <div class='portfolio-info'>
+              <p class='tablet-title'>Web Graph App</p>
               <p>The Web Graph app will allow users to see all metrics displayed different graphs. You can change to
                 view
                 the graph between hourly, daily, weekly, or monthly metrics. You can also save your perferred setting or
@@ -144,15 +149,15 @@
                   target="_blank"> Web Graph App</a></p>
             </div>
           </div>
-            <p>Employee Directory App</p>
+            <p class='mobile-title'>Employee Directory App</p>
             <div class='portfolio-item'>
             <img src="/images/directory.png" alt="employee-directory-app">
             <div class='portfolio-info'>
+              <p class='tablet-title'>Employee Directory App</p>
               <p>This employee directory app uses API to display images and information from a database into an employee
                 directory. The directory will initally display all the employees info, but when clicked a modal box will
                 display all the employees information. You can search and filter through each employees name to find the
-                person you are looking for.<a href="/projects/techdegree-project-8/index.html" target="_blank"> Web
-                  Graph App</a></p>
+                person you are looking for.<a href="/projects/techdegree-project-8/index.html" target="_blank"> Employee Directory App</a></p>
             </div>
           </div>
         </div>
