--- a/index.html
+++ b/index.html
@@ -94,9 +94,22 @@
     <section id='portfolio'>
       <div class='container portfolio'>
         <h2>&lbrace; portfolio &rbrace;<span class='heading-sub-three'>Gallery</span></h2>
-        <div class='portfolio-list'>
-            <p class='mobile-title'>Layout App</p>
-            <div class=portfolio-item>
+        <div class='view'>
+          <div class='list-view'>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z" />
+            </svg>
+          </div>
+          <div class='grid-view'>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <path
+                d="M6 6h-6v-6h6v6zm9-6h-6v6h6v-6zm9 0h-6v6h6v-6zm-18 9h-6v6h6v-6zm9 0h-6v6h6v-6zm9 0h-6v6h6v-6zm-18 9h-6v6h6v-6zm9 0h-6v6h6v-6zm9 0h-6v6h6v-6z" />
+            </svg>
+          </div>
+        </div>
+        <div class='portfolio-list grid'>
+          <p class='mobile-title'>Layout App</p>
+          <div class='portfolio-item'>
             <img src="/images/layout.png" alt="layout-app">
             <div class='portfolio-info'>
               <p class='tablet-title'>Layout App</p>
@@ -105,8 +118,8 @@
                   href="/projects/techdegree-project-4/style_guide_v7/index.html" target="_blank"> Layout App</a></p>
             </div>
           </div>
-            <p class='mobile-title'>Form App</p>
-            <div class='portfolio-item'>
+          <p class='mobile-title'>Form App</p>
+          <div class='portfolio-item'>
             <img src="/images/form.png" alt="form-app">
             <div class='portfolio-info'>
               <p class='tablet-title'>Form App</p>
@@ -115,8 +128,8 @@
                   target="_blank"> Form App</a></p>
             </div>
           </div>
-            <p class='mobile-title'>Photo Gallery App</p>
-            <div class='portfolio-item'>
+          <p class='mobile-title'>Photo Gallery App</p>
+          <div class='portfolio-item'>
             <img src="/images/photoGallery.png" alt="photo-gallery-app">
             <div class='portfolio-info'>
               <p class='tablet-title'>Photo Gallery App</p>
@@ -125,8 +138,8 @@
                   href="/projects/techdegree-project-5/index.html" target="_blank"> Photo Gallery App</a></p>
             </div>
           </div>
-            <p class='mobile-title'>Wheel of Success Game App</p>
-            <div class='portfolio-item'>
+          <p class='mobile-title'>Wheel of Success Game App</p>
+          <div class='portfolio-item'>
             <img src="/images/wheelSuccess.png" alt="wheel-success-app">
             <div class='portfolio-info'>
               <p class='tablet-title'>Wheel of Success Game App</p>
@@ -137,8 +150,8 @@
                   target="_blank"> Wheel of Success Game App</a></p>
             </div>
           </div>
-            <p class='mobile-title'>Web Graph App</p>
-            <div class='portfolio-item'>
+          <p class='mobile-title'>Web Graph App</p>
+          <div class='portfolio-item'>
             <img src="/images/webApp.png" alt="web-graph-app">
             <div class='portfolio-info'>
               <p class='tablet-title'>Web Graph App</p>
@@ -149,15 +162,16 @@
                   target="_blank"> Web Graph App</a></p>
             </div>
           </div>
-            <p class='mobile-title'>Employee Directory App</p>
-            <div class='portfolio-item'>
+          <p class='mobile-title'>Employee Directory App</p>
+          <div class='portfolio-item'>
             <img src="/images/directory.png" alt="employee-directory-app">
             <div class='portfolio-info'>
               <p class='tablet-title'>Employee Directory App</p>
               <p>This employee directory app uses API to display images and information from a database into an employee
                 directory. The directory will initally display all the employees info, but when clicked a modal box will
                 display all the employees information. You can search and filter through each employees name to find the
-                person you are looking for.<a href="/projects/techdegree-project-8/index.html" target="_blank"> Employee Directory App</a></p>
+                person you are looking for.<a href="/projects/techdegree-project-8/index.html" target="_blank"> Employee
+                  Directory App</a></p>
             </div>
           </div>
         </div>
@@ -190,8 +204,7 @@
           </div>
           <div class='facebook'>
             <a href="" target="_blank">
-              <svg role="img" viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg">
+              <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <title>Facebook</title>
                 <path
                   d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z" />
@@ -200,8 +213,7 @@
           </div>
           <div class='twitter'>
             <a href="" target="_blank">
-              <svg role="img" viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg">
+              <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <title>Twitter</title>
                 <path
                   d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z" />
