Made portfolio items span full width of grid container box and created a gutter. Changed background color of sections. Created a flex container for portfolio section so display view can be aligned with header for better visual

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     </section>
     <section id='portfolio'>
       <div class='container portfolio'>
+        <div class='header-container'>
         <h2>&lbrace; portfolio &rbrace;<span class='heading-sub-three'>Gallery</span></h2>
         <div class='view'>
           <div class='list-view'>
@@ -106,6 +107,7 @@
                 d="M6 6h-6v-6h6v6zm9-6h-6v6h6v-6zm9 0h-6v6h6v-6zm-18 9h-6v6h6v-6zm9 0h-6v6h6v-6zm9 0h-6v6h6v-6zm-18 9h-6v6h6v-6zm9 0h-6v6h6v-6zm9 0h-6v6h6v-6z" />
             </svg>
           </div>
+        </div>
         </div>
         <div class='portfolio-list grid'>
           <p class='mobile-title'>Layout App</p>
