Add modal to html layout and add functionality through JS. JS does pull info from selected img and displays. Will work on fixing scroll feature on a later day. Changed media listener in js to to click even directly instead of having at function level. Will also change layout of modal to display different when clicked

--- a/index.html
+++ b/index.html
@@ -177,6 +177,15 @@
             </div>
           </div>
         </div>
+        <div id='modal' class='modal-container'>
+          <div id='scroll' class='scroll-arrow'>
+            <p class='scroll-left'>&lang;</p>
+            <p class='scroll-right'>&rang;</p>
+          </div>
+          <div class='modal-box'>
+            <span class='modal-close'>&times;</span>
+          </div>
+        </div>
     </section>
     </div>
   </main>
