working on adding svg images to portfolio items to dispay skill used on each project. Formatted JS file and got rid of unsued variables

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class='header-container'>
         <h2>&lbrace; portfolio &rbrace;<span class='heading-sub-three'>Gallery</span></h2>
         <div class='view'>
-          <div class='list-view'>
+          <div class='list-view active'>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
               <path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z" />
             </svg>
@@ -109,10 +109,18 @@
           </div>
         </div>
         </div>
-        <div class='portfolio-list grid'>
+        <div class='portfolio-list'>
           <p class='mobile-title'>Layout App</p>
-          <div class='portfolio-item'>
+          <div class='portfolio-item list'>
             <img src="/images/layout.png" alt="layout-app">
+            <div class='skill-used'>
+            <g>
+              <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>HTML5</title><path d="M1.5 0h21l-1.91 21.563L11.977 24l-8.564-2.438L1.5 0zm7.031 9.75l-.232-2.718 10.059.003.23-2.622L5.412 4.41l.698 8.01h9.126l-.326 3.426-2.91.804-2.955-.81-.188-2.11H6.248l.33 4.171L12 19.351l5.379-1.443.744-8.157H8.531z"/></svg>
+            </g>
+            <g>
+              <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>CSS3</title><path d="M1.5 0h21l-1.91 21.563L11.977 24l-8.565-2.438L1.5 0zm17.09 4.413L5.41 4.41l.213 2.622 10.125.002-.255 2.716h-6.64l.24 2.573h6.182l-.366 3.523-2.91.804-2.956-.81-.188-2.11h-2.61l.29 3.855L12 19.288l5.373-1.53L18.59 4.414z"/></svg>
+            </g>
+            </div>
             <div class='portfolio-info'>
               <p class='tablet-title'>Layout App</p>
               <p>My Layout App displays the different ways and methods that can be used when laying out a website. Also
@@ -121,7 +129,7 @@
             </div>
           </div>
           <p class='mobile-title'>Form App</p>
-          <div class='portfolio-item'>
+          <div class='portfolio-item list'>
             <img src="/images/form.png" alt="form-app">
             <div class='portfolio-info'>
               <p class='tablet-title'>Form App</p>
@@ -131,7 +139,7 @@
             </div>
           </div>
           <p class='mobile-title'>Photo Gallery App</p>
-          <div class='portfolio-item'>
+          <div class='portfolio-item list'>
             <img src="/images/photoGallery.png" alt="photo-gallery-app">
             <div class='portfolio-info'>
               <p class='tablet-title'>Photo Gallery App</p>
@@ -141,7 +149,7 @@
             </div>
           </div>
           <p class='mobile-title'>Wheel of Success Game App</p>
-          <div class='portfolio-item'>
+          <div class='portfolio-item list'>
             <img src="/images/wheelSuccess.png" alt="wheel-success-app">
             <div class='portfolio-info'>
               <p class='tablet-title'>Wheel of Success Game App</p>
@@ -153,7 +161,7 @@
             </div>
           </div>
           <p class='mobile-title'>Web Graph App</p>
-          <div class='portfolio-item'>
+          <div class='portfolio-item list'>
             <img src="/images/webApp.png" alt="web-graph-app">
             <div class='portfolio-info'>
               <p class='tablet-title'>Web Graph App</p>
@@ -165,7 +173,7 @@
             </div>
           </div>
           <p class='mobile-title'>Employee Directory App</p>
-          <div class='portfolio-item'>
+          <div class='portfolio-item list'>
             <img src="/images/directory.png" alt="employee-directory-app">
             <div class='portfolio-info'>
               <p class='tablet-title'>Employee Directory App</p>
