created mixins and variables for sass files. Added function file, but no functions yet saved will decide if this file is kept. Add mixins and varialbes to components file.

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             </a>
           </div>
           <div class='facebook'>
-            <a href="" target="_blank">
+            <a href="https://www.facebook.com/" target="_blank">
               <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <title>Facebook</title>
                 <path
@@ -382,7 +382,7 @@
             </a>
           </div>
           <div class='twitter'>
-            <a href="" target="_blank">
+            <a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZW4ifQ%3D%3D%22%7D" target="_blank">
               <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <title>Twitter</title>
                 <path
