--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body class='grid-container'>
   <!-- Main Header -->
   <header class='main-header'>
-    <img src="images/placeimg_640_480_grayscale_tech.jpg" alt="computer with code">
+    <img src="images/placeimg_640_480_grayscale_tech.jpg" alt="computer with code" id='main-img'>
     <div class='main-name'>
-      <h1>&lbrace; jason &rbrace;</h1>
+      <h1><span>&lbrace;</span> <span class='name-h1'>jason</span> <span>&rbrace;</span></h1>
     </div>
     <!-- /Main Header -->
   </header>
