finished moveImg function to give a slow movement to main header img. Used localStorage to save setting for portfolio view if list or grid is selected. Created function to refractor portfolioView to run

--- a/index.html
+++ b/index.html
@@ -42,12 +42,7 @@
         <h2>&lbrace; about &rbrace;<span class='heading-sub-one'>Me</span></h2>
         <p class='display'>Hi, my name is Jason! I am an asipring Front End Developer. I have been studing front end
           developement for
-          about 1.5 years and have loved each minute of it. I had originally wanted to become a cartoonist since I loved
-          creating somthing from scratch and making a beautiful image. I found my passion for Front End Development when
-          taking a cohort that was offered at my job for develpment, from there everything changed. I loved that I could
-          do the same thing with cartooning on a computer and create something amazing. From choosing the right
-          persecitve of a layout, to the corresponding colors, to final product. Being a developer would be an amazing
-          thing to be able to create and show everyone what I can do, and what can be done! </p>
+          over a 1.5 years and I have learned many program languages. I am working towards completeing the Front End Development TechDegree course with Team Treehouse. It has been an amazing journey and I don't plan on stopping now. The next programs that I plan to learn are React and Redux. I hope that you enjoy my website! </p>
       </div>
       <!-- /About -->
     </section>
