updated index.html file

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <p>Using traditional HTML and CSS layout property I was able to create this Form App. Using the form
                 markup in HTML user can interact with this mockup and with some JavaScript can be alerted with missing
                 information or if informaiton was successfully submitted.<a
-                  href="/projects/techdegree-project-3/index.html" target="_blank"> Form App</a></p>
+                  href="https://jaysune36.github.io/techdegree-project-3/" target="_blank"> Form App</a></p>
             </div>
           </div>
           <p class='mobile-title'>Photo Gallery App</p>
@@ -212,7 +212,7 @@
               <p>With CSS I was able to create a reponsive photo gallery the Grid property that will display photos from
                 mobile, table, or web view without the use of Media Queries. JavaScript creates an interactive search
                 feature to filter through photos using upward key input and only display photos matching the input.<a
-                  href="/projects/techdegree-project-5/index.html" target="_blank"> Photo Gallery App</a></p>
+                  href="https://jaysune36.github.io/techdegree-project-5/" target="_blank"> Photo Gallery App</a></p>
             </div>
           </div>
           <p class='mobile-title'>Wheel of Success Game App</p>
@@ -248,7 +248,7 @@
               <p>Using mainly JavaScript in this fun interactive guessing game I was display CSS property to each letter
                 when user interacts with it. JavaScript randomly select a new phrase at the start of each new game and
                 remove all property from HTML markup.<a
-                  href="/projects/techdegree-project-6/game_show_app_v1.2/index.html" target="_blank"> Wheel of Success
+                  href="https://jaysune36.github.io/techdegree-project-6/" target="_blank"> Wheel of Success
                   Game App</a></p>
             </div>
           </div>
@@ -286,7 +286,7 @@
                 display interactive graphs and charts. This was also my introduciton to replace the use of images with
                 scalable vector graphs(SVG's). With JS I was able to use Local Storage to store users settings create an
                 interactive message feature to sort through users name and display an alert if complete or message is
-                missing information. <a href="/projects/techdegree-project-7/index.html" target="_blank"> Web Graph
+                missing information. <a href="https://jaysune36.github.io/techdegree-project-7/" target="_blank"> Web Graph
                   App</a></p>
             </div>
           </div>
@@ -322,7 +322,7 @@
               <p class='tablet-title'>Employee Directory App</p>
               <p>Using more advanced JS properties I was able to create a employee directory app that use of Fetch on
                 API's I can display employee information. API's when pulled are stored into a class property so the
-                information can be used later<a href="/projects/techdegree-project-8/index.html" target="_blank">
+                information can be used later<a href="https://jaysune36.github.io/techdegree-project-8/" target="_blank">
                   Employee
                   Directory App</a></p>
             </div>
