changed png file to PNG to try and see if resolves issue with gh-pages file

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <p class='mobile-title'>Layout App</p>
           <div class='portfolio-item list'>
             <div class='img-wrapper'>
-            <img src="images/layout.png" alt="layout-app">
+            <img src="images/layout.PNG" alt="layout-app">
             <div class='skill-used'>
               <div class='html-svg skill-one'>
                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
