--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <p class='mobile-title'>Photo Gallery App</p>
           <div class='portfolio-item list'>
             <div class='img-wrapper'>
-            <img src="images/photoGallery.png" alt="photo-gallery-app">
+            <img src="/images/photoGallery.png" alt="photo-gallery-app">
             <div class='skill-used'>
               <div class='html-svg skill-one'>
                 <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
