--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+ <!-- GitHub Pages link: https://jaysune36.github.io/techdegree-project-9/ -->
 
 <head>
   <meta charset="UTF-8">
